Fixed update checking

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ Galaxy64.dll*
 GalaxyCSharp.dll*
 GalaxyCSharpGlue.dll*
 Hayden Mod Stuff/
+test_dir/
 .curseclient
 Lidgren.Network.dll*
 Lidgren.Network.pdb
